# NIDS-Linux

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: live_attack_eval.py
src/nad/: adaptive.py  behavioral.py  classify.py  cli.py  detect.py  features.py  service.py  storage.py
src/nad/capture/: __init__.py  base.py  factory.py  linux_libpcap.py  netlocal.py  windows_npcap.py
src/nad/web/: app.py
src/nad/web/static/: app.js  index.html  style.css
tests/: test_adaptive.py  test_behavioral.py  test_capture_base.py  test_capture_linux.py  test_detect.py  test_features.py  test_storage.py
