[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "network-anomaly-detector"
version = "0.1.0"
description = "Host-resident network anomaly detector for Linux with explainable, statistical alerts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Seokhyun" }]
keywords = ["network", "anomaly-detection", "ids", "libpcap", "linux", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "click>=8.1",
    "dpkt>=1.9.8",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
nad = "nad.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nad"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
